# infra

./: .gitignore  .pre-commit-hooks.yaml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: beman-tidy.yml
pre_commit_hooks/: beman-tidy
tools/beman-tidy/: README.md  beman_tidy.py  pyproject.toml
tools/beman-tidy/beman_tidy/lib/checks/beman_standard/: directory.py  readme.py
tools/beman-tidy/beman_tidy/lib/utils/: git.py
tools/beman-tidy/docs/: dev-guide.md
tools/beman-tidy/lib/: pipeline.py
tools/beman-tidy/lib/checks/base/: file_base_check.py
tools/beman-tidy/lib/checks/beman_standard/: release.py  toplevel.py
tools/beman-tidy/lib/utils/: git.py
tools/beman-tidy/tests/beman_standard/readme/: conftest.py
